--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ my.datasource.username=username
 my.datasource.password=password
 my.datasource.etc.max-connection=1
 my.datasource.etc.timeout=3500ms
-my.datasource.etc.option=CACHE,ADMIN
+my.datasource.etc.options=CACHE,ADMIN
